# Chat

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/src/: client.cpp  main.cpp
Client/src/ClientApp/Client/: Client.cpp  Client.h
Client/src/ClientApp/Interface/: InputArea.cpp  InputArea.h  Message.cpp  OutputMessagesControler.cpp  OutputMessagesControler.h
Client/src/Interface/: InputArea.cpp  InputArea.h  InterfaceSync.cpp  InterfaceSync.h  Message.cpp  Message.h
Server/: CMakeLists.txt
Server/src/: main.cpp
Server/src/Server/: Server.cpp  Server.h
libs/: Console.cpp  Console.h  ConsoleColor.cpp  ConsoleColor.h  ConsoleCoords.cpp  ConsoleCoords.h  ConsoleLogFunctions.cpp  ConsoleLogFunctions.h  ConsoleOutputFunctions.cpp  ConsoleOutputFunctions.h  KeyBoard.h  MessagePacket.cpp  MessagePacket.h  Socket.cpp  Socket.h  SocketFunctions.cpp  SocketFunctions.h  User.cpp  User.h
src/: main.cpp
